// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Switch /> should render switch 1`] = `
<div>
  <div
    class="BaseBox-bmPWx dhmCzz"
    data-blade-component="switch"
  >
    <label
      class="SelectorLabelweb__StyledSelectorLabel-sc-1yoi09a-0 bgSmPY"
      data-blade-component="switch-label"
      style="cursor: pointer;"
    >
      <input
        aria-checked="false"
        aria-disabled="false"
        aria-invalid="false"
        aria-label="Toggle Darkmode"
        aria-required="false"
        class="SelectorInputweb__StyledInput-sc-1bnkrae-0 jHlQyY"
        role="switch"
        type="checkbox"
        value=""
      />
      <div
        aria-hidden="true"
        class="BaseBox-bmPWx SwitchTrackweb__SwitchTrack-t4l0ax-0  cwBdxr"
        data-blade-component="base-box"
      >
        <div
          class="BaseBox-bmPWx Thumb-jf4wbz-0  gYYaLo"
          data-blade-component="base-box"
        >
          <div
            class="BaseBox-bmPWx AnimatedThumbweb__AnimatedThumb-i5qu0o-0  cZLYHA"
            data-blade-component="base-box"
          >
            <svg
              aria-hidden="true"
              class="Svgweb__StyledSvg-vcmjs8-0 AnimatedThumbIconweb__AnimatedThumbIcon-sc-3hk5w7-0 ezMhSy"
              data-blade-component="icon"
              fill="none"
              height="8px"
              viewBox="0 0 11 8"
              width="8px"
            >
              <path
                clip-rule="evenodd"
                d="M8.81891 0.546661C9.12722 0.238352 9.62709 0.238353 9.9354 0.546661C10.2437 0.85497 10.2437 1.35484 9.9354 1.66315L4.14592 7.45262C3.83761 7.76093 3.33775 7.76093 3.02944 7.45262L0.397858 4.82104C0.0895488 4.51273 0.0895488 4.01286 0.397857 3.70456C0.706166 3.39625 1.20603 3.39625 1.51434 3.70456L3.58768 5.77789L8.81891 0.546661Z"
                data-blade-component="svg-path"
                fill="hsla(216, 33%, 29%, 1)"
                fill-rule="evenodd"
              />
            </svg>
          </div>
        </div>
      </div>
    </label>
  </div>
</div>
`;

exports[`<Switch /> should set disabled state with isDisabled 1`] = `
<div>
  <div
    class="BaseBox-bmPWx dhmCzz"
    data-blade-component="switch"
  >
    <label
      class="SelectorLabelweb__StyledSelectorLabel-sc-1yoi09a-0 bgSmPY"
      data-blade-component="switch-label"
      style="cursor: pointer;"
    >
      <input
        aria-checked="false"
        aria-disabled="true"
        aria-invalid="false"
        aria-label="Toggle Darkmode"
        aria-required="false"
        class="SelectorInputweb__StyledInput-sc-1bnkrae-0 hJscHc"
        disabled=""
        role="switch"
        type="checkbox"
        value=""
      />
      <div
        aria-hidden="true"
        class="BaseBox-bmPWx SwitchTrackweb__SwitchTrack-t4l0ax-0  jiufoI"
        data-blade-component="base-box"
      >
        <div
          class="BaseBox-bmPWx Thumb-jf4wbz-0  gYYaLo"
          data-blade-component="base-box"
        >
          <div
            class="BaseBox-bmPWx AnimatedThumbweb__AnimatedThumb-i5qu0o-0  cdGcGM"
            data-blade-component="base-box"
          >
            <svg
              aria-hidden="true"
              class="Svgweb__StyledSvg-vcmjs8-0 AnimatedThumbIconweb__AnimatedThumbIcon-sc-3hk5w7-0 ezMhSy"
              data-blade-component="icon"
              fill="none"
              height="8px"
              viewBox="0 0 11 8"
              width="8px"
            >
              <path
                clip-rule="evenodd"
                d="M8.81891 0.546661C9.12722 0.238352 9.62709 0.238353 9.9354 0.546661C10.2437 0.85497 10.2437 1.35484 9.9354 1.66315L4.14592 7.45262C3.83761 7.76093 3.33775 7.76093 3.02944 7.45262L0.397858 4.82104C0.0895488 4.51273 0.0895488 4.01286 0.397857 3.70456C0.706166 3.39625 1.20603 3.39625 1.51434 3.70456L3.58768 5.77789L8.81891 0.546661Z"
                data-blade-component="svg-path"
                fill="hsla(214, 18%, 69%, 1)"
                fill-rule="evenodd"
              />
            </svg>
          </div>
        </div>
      </div>
    </label>
  </div>
</div>
`;
